<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_oratakashi_id" translatable="false">Oratakashi.id</string>
    <string name="title_from" translatable="false">From</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_popular">Popular</string>
    <string name="title_fav">Favorite</string>
    <string name="title_other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_movie">Movie</string>
    <string name="title_db">DB</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="title_search">Search</string>
    <string name="title_loading">Loading…</string>
    <string name="placeholder_search">Showing result of ‘%1$s’</string>
    <string name="foo">Lorem Ipsum</string>
    <string name="title_icon">Icon</string>
    <string name="dummy_duration">1h 29m</string>
    <string name="title_add_to_favorite">Add to Favorite</string>
    <string name="title_saved">Saved</string>
    <string name="title_watch_trailer">Watch Trailer</string>
    <string name="title_cast">Cast</string>
    <string name="title_unknown">Unknown</string>
    <string name="title_genre">Genre</string>
    <string name="title_id">ID</string>
    <string name="title_title">Title</string>
    <string name="title_release_date">Release Date</string>
</resources>