<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ltLoading"
        android:layout_width="@dimen/size_150"
        android:layout_height="@dimen/size_150"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_320"
                    android:contentDescription="@string/title_icon"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_320"
                    android:background="@drawable/bg_gradient_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_250"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/foo"
                    android:fontFamily="@font/bold"
                    android:textSize="@dimen/font_24"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_duration"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_14"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/ic_resolution"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_10"
                    android:paddingBottom="@dimen/margin_5"
                    android:text="4K"
                    android:textSize="@dimen/font_10"
                    app:layout_constraintStart_toEndOf="@+id/tvDuration"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginStart="16dp"
                    android:text="@string/foo"
                    android:fontFamily="@font/light"
                    android:textSize="@dimen/font_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTrailer"
                    style="@style/buttonCustomNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_10"
                    app:icon="@drawable/ic_play"
                    app:iconGravity="textStart"
                    app:iconPadding="@dimen/padding_5"
                    android:text="@string/title_watch_trailer"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_12"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/buttonCustomOutline"
                    app:icon="@drawable/ic_add"
                    app:iconGravity="textStart"
                    app:iconTint="@color/primary"
                    app:iconPadding="@dimen/padding_5"
                    android:text="@string/title_add_to_favorite"
                    android:textColor="@color/white"
                    android:fontFamily="@font/regular"
                    android:textSize="@dimen/font_12"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_unknown"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnTrailer" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:fontFamily="@font/bold"
                    android:text="@string/title_cast"
                    android:textSize="@dimen/font_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>