<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/title_movie"
                        android:textSize="@dimen/font_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/title_db"
                        android:layout_marginStart="@dimen/margin_5"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/font_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bell"
                        android:layout_marginEnd="@dimen/margin_16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpSlider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_256"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/ltLoading"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_150"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_50"
                app:lottie_loop="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:lottie_rawRes="@raw/loading" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="@dimen/size_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:tabBackground="@drawable/tab_pager_selector"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginEnd="@dimen/margin_50"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <TextView
                android:id="@+id/tvTitlePopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_popular_movies"
                android:fontFamily="@font/bold"
                android:textSize="@dimen/font_18"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vpSlider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitlePopular" />

            <TextView
                android:id="@+id/tvTitleComingSoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_coming_soon"
                android:textSize="@dimen/font_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvPopular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComingSoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleComingSoon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>